# 6502Emulator

./: Backlog.txt  CMakeLists.txt  CPU.h  Instruction Set OpCode Matrix.txt  Mem.h  Memory.cpp  Memory.h  Processor.cpp  Processor.h  Resource Reading.txt  Specifications.txt  instructions.h  main.cpp  main.h  testingFile.cpp  testingFile.h
Resources/: 6502 Guide.txt  Sample Maths Routines.txt
google-test/: CMakeLists.txt  addressingModeTests.cpp  opCodeTests.cpp  test1.cpp
lib/: test1.cpp
